Measure what a dyn4j step costs on the bench Pi (#155)
Time is a non-issue and allocation does not change on different silicon.
One chassis at ADR 0010's 5 x 1 ms costs 10.00 us per 5 ms period, 0.200 %
of the budget; ten bodies 49.5 us, 0.990 %. The Pi is a flat 3.8-5.1x this
workstation across every dyn4j row, below the 5-10x physics-sim.md
extrapolated, and dyn4j is 5.88x the DIY model here against 8.56x there.

The per-step byte counts are bit-identical to the workstation's, so there
was no Pi allocation number to discover. Three things about the context
are new: the robot deploys with -XX:+UseZGC, ZGC ergonomically disables
compressed oops and so allocates 20-39 % more than every figure #144
recorded, and the only configuration that runs on Pi hardware --
sim-hitl's disabled loop with the chassis at rest -- sits on 184.0 B/step,
the empty-world floor exactly rather than near it.

ADR 0002's collector question is declined rather than reopened, and the
reopen condition should be restated as a configuration rather than a
dependency. Hands #147 a measured sub-step allocation lever of 1.8-2.2x,
not the fivefold the ticket and the map both assert.

Amends dyn4j-step-cost.md section 6, and corrects its 4 GB claim: the box
has 8056 MB, which jvm-tuning.md:4 had already recorded.